dataset1235/2025-2/1153765216/users/2713785857/executions/3138746197_4190502342.log
== SUBMISSION (2025-08-14 19:19:47)
-- CODE: 
prin(180/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(180/4)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(180/4)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:19:51)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:19:52)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:19:20)
-- CODE: 
prin(180/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(180/4)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(180/4)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
